; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/dev/cgd/extr_t_cgd_3des.c_write_testvec.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/dev/cgd/extr_t_cgd_3des.c_write_testvec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.testvec = type { i32, i32 }

@SECSIZE = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.testvec*)* @write_testvec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_testvec(i32 %0, %struct.testvec* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.testvec*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.testvec* %1, %struct.testvec** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.testvec*, %struct.testvec** %5, align 8
  %8 = getelementptr inbounds %struct.testvec, %struct.testvec* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @SECSIZE, align 4
  %11 = mul nsw i32 %9, %10
  %12 = load i32, i32* @SEEK_SET, align 4
  %13 = call i64 @rump_sys_lseek(i32 %6, i32 %11, i32 %12)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %27

16:                                               ; preds = %2
  %17 = load i32, i32* %4, align 4
  %18 = load %struct.testvec*, %struct.testvec** %5, align 8
  %19 = getelementptr inbounds %struct.testvec, %struct.testvec* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @SECSIZE, align 4
  %22 = call i32 @rump_sys_write(i32 %17, i32 %20, i32 %21)
  %23 = load i32, i32* @SECSIZE, align 4
  %24 = icmp ne i32 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %16
  store i32 -1, i32* %3, align 4
  br label %27

26:                                               ; preds = %16
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %25, %15
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i64 @rump_sys_lseek(i32, i32, i32) #1

declare dso_local i32 @rump_sys_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
